--- a/Style.css
+++ b/Style.css
@@ -9,8 +9,22 @@ body{
 
 .Logo{
     width: 10%;
+}
+
+.Product{
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: space-evenly;
     
 }
+
+.baris1{
+    margin-left: 3%;
+    margin-top: 3%;
+    margin-bottom: 3%;
+    font-size: x-large;
+  }  
 
 .Sliders{
     width: 100%;
